# Serendip.bot

./: .env.example  .gitignore  .version-hashes.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  copy-minimal.sh  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
docs/: ARCHITECTURE.md  (+2 more)
services/agent/: Dockerfile  Dockerfile.api  Dockerfile.beat  Dockerfile.worker  apply-feed-patch.ipynb  pyproject.toml  worker.py
services/agent/agent/: __init__.py  api.py  celery_app.py  config.py  crawler.py  db.py  discovery_agent.py  hourly_discovery.py  image_embeddings.py  ingestion.py  logging.py  mood_seeder.py  serendip.bot.code-workspace  serving.py  tasks.py  telemetry.py  telemetry_tasks.py  url_safety.py
services/agent/agent/providers/: __init__.py  azure_ai.py  base.py  claude.py  gemini.py  ollama.py  pricing.py  router.py
services/agent/agent/seeds/: 2026-04-21-discovery-report.yaml  __init__.py  __main__.py  all_sources.yaml  bootstrap_results.txt  content_scraper.py  culture.yaml  culture_seeds.yaml  design.yaml  design_seeds.yaml  fast_probe_feeds.py  food.yaml  food_seeds.yaml  gaming.yaml  gaming_seeds.yaml  general.yaml  general_seeds.yaml  health.yaml  health_seeds.yaml  history.yaml  history_seeds.yaml  humor.yaml  humor_seeds.yaml  nature.yaml  nature_seeds.yaml  philosophy.yaml  philosophy_seeds.yaml  review_seeds.py  rss-feeds.yaml  science.yaml  science_seeds.yaml  technology.yaml  technology_seeds.yaml  travel.yaml  travel_seeds.yaml
services/agent/agent/seeds/outgoing/: 2026-04-21T064535Z-science.json  2026-04-21T154816Z-science.json  (+1 more)
services/agent/scripts/: export_seeds.py  train_rerank_weights.py  validate_feed.py
services/agent/tests/: test_crawler.py  test_discovery_agent.py  test_image_mirroring_integration.py  test_image_ocr_smoke.py  test_ingestion_image_gates.py  test_router.py
(+113 files in other folders)
